# vault-credentials

./: .gitignore  Cargo.toml  README.md
src/: credentials.rs  lib.rs  secret_retriever.rs  token_retriever.rs
src/examples/: bin.rs
