[package]
name = "vault-credentials"
description = "Rust Library that fetch secrets from Vault and load them as environment variables."
version = "0.1.0"
authors = ["Lucas Perreau <lucas.perreau@leansys.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
include = [
    "src/lib.rs",
    "Cargo.toml"
]

[lib]
name = "vault_credentials"
path = "src/lib.rs"

[[example]]
name = "vault_credentials_test"
path = "src/examples/bin.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.63"

[dev-dependencies]
dotenv = "0.15.0"