[package]
name = "vault-credentials"
description = "Rust Library that fetch secrets from Vault and load them as environment variables."
version = "0.4.1"
authors = ["Lucas Perreau <lucas.perreau@leansys.fr>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mcfloy/vault-credentials"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
include = [
    "**/*.rs",
    "Cargo.toml"
]

[lib]
name = "vault_credentials"
path = "src/lib.rs"

[[example]]
name = "vault_credentials_test"
path = "src/examples/bin.rs"

[dependencies]
reqwest = { version = "0.11.3", features = ["json"] }
tokio = { version = "1.5.0", features = ["full"] }
serde_json = "1.0.63"

[dev-dependencies]
dotenv = "0.15.0"